# sustainable_hr_tool

./: .gitignore  README.md  config.yaml  dashboard.py  main.py  requirements.txt  setup.cfg
data/raw/: Activities.csv
docs/: RUNNING.md
notebooks/: single_run_demo.ipynb  single_run_demo_README.md  test_workflow.ipynb
scratch/: predict_scenario.py  validate_and_clean.ps1
src/: __init__.py  data_loader.py  evaluation.py  evaluation_visuals.py  features.py  modeling.py  modelling.py  predictor.py  preprocessing.py  race_predictor.py  targets.py  train.py  utils.py  validation.py  visualise.py
tests/: conftest.py  test_data_loader.py  test_evaluation.py  test_features.py  test_modelling.py  test_preprocessing.py  test_race_predictor.py
tools/: README.md  __init__.py  predict_scenario.py  validate_and_clean.py
