[metadata]
name = sustainable_hr_tool
version = 0.1.0
description = Sustainable HR Tool utilities and entry points

[options]
packages = find:
include_package_data = True

[options.packages.find]
where = .

[options.entry_points]
console_scripts =
    srht-validate = tools.validate_and_clean:main
    srht-predict = tools.predict_scenario:main
